# fastapi

./: #.  .clinerules  .continuerules  .coverage.GL738RC2e4d06aa.62433.347962  .coverage.LAPTOP-7BUC2HHB.20644.XYqHRFXx  .coverage.pop-os.151580.326909  .env  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .isort.cfg  .libcst.codemod.yaml  .pre-commit-config.yaml  .project  .python-version  .rules  .travis.yml  AGENTS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dynatrace_OTP  GEMINI.md  ISSUES_AND_FIXES.md  ISSUE_TEMPLATE.md  Jenkinsfile  Juangpt-coder  LICENSE  LLM.md  PR_DESCRIPTION.md  Pipfile  README.md  README.zh.md  REQUIRED_NONE_ENHANCEMENT.md  SECURITY.md  SECURITY_AUDIT.md  (+65 more)
.circleci/: config.yml
.claude/: governance.md  settings.local.json
.copier/: update_dotenv.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  copilot-instructions.md  labeler.yml  (+2 more)
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  backend.dockerfile  celeryworker.dockerfile  pyproject.toml  tests-start.sh
backend/app/: backend_pre_start.py  celeryworker_pre_start.py  crud.py  initial_data.py  main.py  models.py  utils.py  worker.py
backend/app/alembic/: env.py  script.py.mako
backend/app/alembic/versions/: 1a31ce608336_add_cascade_delete_relationships.py  9c0a54914c78_add_max_length_for_string_varchar_.py  d98dd8ec85a3_edit_replace_id_integers_in_all_models_.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: ip.py  items.py  login.py  private.py  users.py  utils.py
backend/app/core/: config.py  db.py  security.py
backend/app/email-templates/src/: new_account.mjml  reset_password.mjml  test_email.mjml
backend/app/schemas/: __init__.py  item.py
backend/app/tests/: conftest.py
backend/app/tests/api/api_v1/: test_items.py  test_login.py  test_users.py
backend/app/tests/api/routes/: test_items.py  test_login.py  test_private.py  test_users.py
backend/app/tests/crud/: test_user.py
backend/app/tests/scripts/: test_backend_pre_start.py  test_celery_pre_start.py  test_test_pre_start.py
backend/app/tests/utils/: user.py  utils.py
backend/scripts/: format.sh  lint.sh  prestart.sh  test.sh  tests-start.sh
src/backend/app/: alembic.ini  backend_pre_start.py  celeryworker_pre_start.py  crud.py  main.py  models.py  pyproject.toml  utils.py  worker-start.sh
src/backend/app/alembic/: README  env.py
src/backend/app/alembic/versions/: e2412789c190_initialize_models.py
src/backend/app/api/: deps.py
src/backend/app/api/api_v1/: api.py
src/backend/app/api/api_v1/endpoints/: items.py  users.py
src/backend/app/api/routes/: items.py  login.py
src/backend/app/app/: initial_data.py  main.py  models.py  utils.py  worker.py
src/backend/app/app/api/: deps.py
src/backend/app/app/api/api_v1/endpoints/: items.py  login.py  users.py  utils.py
src/backend/app/app/core/: config.py
src/backend/app/app/crud/: __init__.py  base.py  crud_item.py  crud_user.py
src/backend/app/app/db/: engine.py  init_db.py  session.py
src/backend/app/app/models/: __init__.py
src/backend/app/app/schemas/: msg.py
src/backend/app/app/tests/: .gitignore  conftest.py
src/backend/app/app/tests/api/api_v1/: test_celery.py  test_items.py
src/backend/app/app/tests/crud/: test_user.py
src/backend/app/core/: config.py  security.py
src/backend/app/crud/: __init__.py  base.py  crud_item.py  crud_user.py
src/backend/app/db/: engine.py  init_db.py
src/backend/app/email-templates/src/: test_email.mjml
src/backend/app/schemas/: item.py  token.py  user.py
src/backend/app/scripts/: lint.sh  test-cov-html.sh
src/backend/app/tests/: conftest.py
src/backend/app/tests/api/api_v1/: test_celery.py  test_items.py  test_login.py  test_users.py
src/backend/app/tests/crud/: test_item.py  test_user.py
src/backend/app/tests/utils/: item.py  user.py  utils.py
{{cookiecutter.project_slug}}/backend/app/: .gitignore  Pipfile  alembic.ini  backend-live.sh  backend-start.sh  prestart.sh  pyproject.toml  tests-start.sh
{{cookiecutter.project_slug}}/backend/app/alembic/: env.py  script.py.mako
{{cookiecutter.project_slug}}/backend/app/alembic/versions/: d4867f3a4c0a_first_revision.py  e6ae69e9dcb9_first_revision.py
{{cookiecutter.project_slug}}/backend/app/app/: backend_pre_start.py  celeryworker_pre_start.py  initial_data.py  main.py  tests_pre_start.py  utils.py  worker.py
{{cookiecutter.project_slug}}/backend/app/app/api/api_v1/: api.py
{{cookiecutter.project_slug}}/backend/app/app/api/api_v1/endpoints/: items.py  login.py  role.py  token.py  user.py  users.py  utils.py
{{cookiecutter.project_slug}}/backend/app/app/api/utils/: db.py  security.py
{{cookiecutter.project_slug}}/backend/app/app/core/: celery_app.py  config.py  jwt.py  security.py
{{cookiecutter.project_slug}}/backend/app/app/crud/: __init__.py  base.py  crud_item.py  crud_user.py  item.py  user.py  utils.py
{{cookiecutter.project_slug}}/backend/app/app/db/: base.py  base_class.py  external_session.py  full_text_search_utils.py  init_db.py  session.py
{{cookiecutter.project_slug}}/backend/app/app/db_models/: base_relations.py  role.py  user.py
{{cookiecutter.project_slug}}/backend/app/app/email-templates/src/: new_account.mjml
{{cookiecutter.project_slug}}/backend/app/app/models/: config.py  item.py  role.py  token.py  user.py
{{cookiecutter.project_slug}}/backend/app/app/schemas/: __init__.py  item.py  token.py  user.py
{{cookiecutter.project_slug}}/backend/app/app/search_index_definitions/: users.json  users_01.json
{{cookiecutter.project_slug}}/backend/app/app/tests/: conftest.py
{{cookiecutter.project_slug}}/backend/app/app/tests/api/api_v1/: test_celery.py  test_items.py  test_login.py  test_token.py  test_user.py  test_users.py
{{cookiecutter.project_slug}}/backend/app/app/tests/crud/: test_get_ids.py  test_item.py  test_user.py
{{cookiecutter.project_slug}}/backend/app/app/tests/utils/: item.py  user.py  utils.py
{{cookiecutter.project_slug}}/backend/app/scripts/: format.sh  lint.sh  test.sh
(+5883 files in other folders)
